force-app/main/default/objects/eBike_Fleeet__c/eBike_Fleeet__c.object-meta.xml
<CustomObject>
    <label>eBike Fleet</label>
    <nameField>
        <displayFormat>EBF-{00000}</displayFormat>
        <label>eBike Fleet Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eBike Fleet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>