force-app/main/default/objects/eBike_Fleeet__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>eBike Fleet</relationshipLabel>
    <relationshipName>eBike_Fleet</relationshipName>
    <type>Lookup</type>
</CustomField>