force-app/main/default/objects/eBike_Fleeet__c/fields/Contract_End__c.field-meta.xml
<CustomField>
    <fullName>Contract_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract End</label>
    <type>Date</type>
</CustomField>