force-app/main/default/objects/eBike_Fleeet__c/fields/eBike__c.field-meta.xml
<CustomField>
    <fullName>eBike__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>eBike</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>eBike Fleet</relationshipLabel>
    <relationshipName>eBike_Fleet</relationshipName>
    <type>Lookup</type>
</CustomField>