force-app/main/default/objects/eBike_Fleeet__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VIN</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>